update guide What is Voltage Finance?

--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-15T11:29:56.106Z'
+created: '2024-01-15T13:24:00.951Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Voltage Finance is a DeFi (Decentralized Finance) platform that allows
