update guide What is Voltage Finance?

--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-16T11:10:11.985Z'
+created: '2024-01-16T11:15:53.787Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
@@ -22,7 +22,11 @@ steps:
     name: Introduction to Voltage Finance
     stepItems: []
     uuid: c12927c9-9a39-42a9-b1bb-4e766ffc3449
-  - content: 'Please choose one answer for each question. '
+  - content: |+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
+
     name: Introduction Evaluation
     stepItems:
       - answerKeys:
@@ -119,7 +123,10 @@ steps:
     name: 'Voltage Features & Services  '
     stepItems: []
     uuid: 2ac763dc-1d97-42a0-83e3-5b401043313b
-  - content: 'Please choose one answer for each question. '
+  - content: |-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
     name: Features & Services  Evaluation
     stepItems:
       - answerKeys:
@@ -214,7 +221,10 @@ steps:
     name: 'How to get started with Voltage '
     stepItems: []
     uuid: 49315780-0331-4e52-b1bc-cfbb9e334b24
-  - content: Please choose one answer.
+  - content: |-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
     name: Getting Started Evaluation
     stepItems:
       - answerKeys:
@@ -260,7 +270,10 @@ steps:
     name: How to Trade on Voltage Finance
     stepItems: []
     uuid: a3c193a3-17ec-46aa-aaa3-6cdb01ee3682
-  - content: 'Please choose one answer for each question. '
+  - content: |-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
     name: Trading Evaluation
     stepItems:
       - answerKeys:
@@ -371,7 +384,10 @@ steps:
     name: How to Yield Farm on Voltage DEX
     stepItems: []
     uuid: a6df3c6a-f9ca-4688-b846-cbd48645769b
-  - content: 'Please choose one answer for each question. '
+  - content: |-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
     name: Yield Farming Evaluation
     stepItems:
       - answerKeys:
@@ -495,7 +511,10 @@ steps:
     name: 'What is sFUSE & Liquid Staking? '
     stepItems: []
     uuid: 3cbffdd7-4095-478e-a529-3cab0b778c2c
-  - content: ''
+  - content: |-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
     name: Liquid Staking Evaluation
     stepItems:
       - answerKeys:
@@ -624,7 +643,10 @@ steps:
     name: What is Voltage Launchpad?
     stepItems: []
     uuid: 715f60da-bd5d-4672-977a-c8b64d164035
-  - content: ''
+  - content: |-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403708727_fuse_%20uni%20test%20knowledge.jpg"/>
+      </div>
     name: Voltage Launchpad Evaluation
     stepItems:
       - answerKeys:
