--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,11 +1,39 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-16T11:15:53.787Z'
+created: '2024-01-16T11:36:54.604Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
 publishStatus: Live
 steps:
+  - content: >-
+      Welcome to Fuse University – Your Gateway to Web3 Knowledge and Token
+      Rewards! 
+
+
+      Join us on an exciting journey of learning and exploration. Here, you can
+      enhance your understanding of the Web3 world through engaging quizzes, and
+      the best part is, that correct answers can earn you valuable tokens. 
+
+
+      Dive into the world of decentralized technologies, blockchain, and more,
+      and let your Web3 knowledge flourish while reaping the rewards!
+
+
+      **VOLTAGE FINANCE QUIZ DETAILS: 
+
+
+      Opening Date: Thursday 18th January at 2 PM UTC 
+
+      Closing Date: Thursday 25th January at 2 PM UTC
+
+
+      $500 in VOLT Tokens will be shared by 100 winners. 
+
+      100 Winners are picked randomly from all successful applicants. **
+    name: 'Welcome to Fuse University '
+    stepItems: []
+    uuid: c9d383e9-7491-498c-829c-8d79307bbf24
   - content: >+
       <div align="center">
         <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403384912_screenshot_2024-01-16%20at%2013.09.35.png"/>
@@ -84,6 +112,11 @@ steps:
           and trading volume in 2024.
     uuid: a093328c-2b03-4bb1-b966-d4e7b8987860
   - content: >-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403829733_screenshot_2024-01-16%20at%2013.16.57.png"/>
+      </div>
+
+
       Voltage Finance is a platform that provides a range of DeFi tools that can
       be accessed easily on any smart device. One of the main features of
       Voltage Finance is its Automated Market Maker (AMM) exchange. This allows
@@ -214,6 +247,11 @@ steps:
           their earnings to maximize their returns.
     uuid: b912ad71-f677-498b-bbe5-9254e1ea1ac1
   - content: >-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705403967272_fusefi-wordmark.63f4a8e00df71eb2fdaae6a620249e94.svg"/>
+      </div>
+
+
       To get started with Voltage Finance, you can visit their official website
       and connect your wallet to the platform. Once you have connected your
       wallet, you can start trading, investing, and earning with just a few
@@ -245,7 +283,12 @@ steps:
           To get started with Voltage Finance, the first step is to visit their
           official website and connect your wallet to the platform.
     uuid: 3df8f18e-82e0-4190-a5df-e92c8ce3dbdd
-  - content: >-
+  - content: >+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705404009995_screenshot_2024-01-16%20at%2013.20.01.png"/>
+      </div>
+
+
       To trade on Voltage DEX, you can use the simple swap interface. All you
       need to do is select the two tokens that you want to exchange. The
       liquidity on the exchange is provided by Liquidity Providers (LPs) who
@@ -267,6 +310,7 @@ steps:
       StableSwap integration available for trading stablecoins. Overall, Voltage
       DEX offers a user-friendly and efficient trading experience for
       cryptocurrency traders.
+
     name: How to Trade on Voltage Finance
     stepItems: []
     uuid: a3c193a3-17ec-46aa-aaa3-6cdb01ee3682
@@ -349,7 +393,12 @@ steps:
           Liquidity Providers (LPs) receive LP tokens, which can also be staked
           to earn VOLT tokens on the farm.
     uuid: a68e1405-e08c-4ea1-b2e2-ac670f049ce2
-  - content: >-
+  - content: >+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705404395768_screenshot_2024-01-16%20at%2013.26.28.png"/>
+      </div>
+
+
       Yield farming on Voltage DEX is a process that allows you to earn VOLT
       token rewards by providing liquidity to the platform. To get started, you
       need to search and select two tokens that you want to pool together. For
@@ -381,6 +430,7 @@ steps:
       providing liquidity to the platform. By following these steps, you can
       start yield farming and maximize your earnings. Remember to connect and
       confirm your wallet before you begin the process.
+
     name: How to Yield Farm on Voltage DEX
     stepItems: []
     uuid: a6df3c6a-f9ca-4688-b846-cbd48645769b
@@ -462,6 +512,11 @@ steps:
           by providing liquidity to the platform.
     uuid: 2560c42f-2f45-4a6d-9cbd-886f4571c675
   - content: >-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705404450394_screenshot_2024-01-16%20at%2013.27.22.png"/>
+      </div>
+
+
       sFUSE and Liquid Staking are concepts related to the Fuse Network, a
       blockchain platform. Liquid staking refers to a model where users can
       stake their Fuse tokens and earn rewards. Staking is similar to putting
@@ -595,6 +650,11 @@ steps:
           value.
     uuid: fb41c3cc-15ed-427b-90f3-47bb5aa16827
   - content: >-
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705404505504_screenshot_2024-01-16%20at%2013.28.14.png"/>
+      </div>
+
+
       Voltage Launchpad is the first-ever token launch platform on the Fuse
       Network. It serves as a gateway for projects looking to join the growing
       Fuse ecosystem. The platform operates in a phased approach, with three
@@ -731,7 +791,11 @@ steps:
       have access to. 
 
 
-      Once the winners are selected, you will be notified by email. 
+      100 Winners will be chosen from all the applicants who complete the TaskOn
+      tasks and answer all the quiz questions correctly. 
+
+
+      Once the 100 winners are selected, you will be notified by email. 
     name: 'That''s it! '
     stepItems:
       - label: Wallet Address
@@ -744,7 +808,7 @@ steps:
         uuid: 41c0c90f-2358-43ea-9730-ff5465071e09
     uuid: a5c0b68c-ccb8-43bb-831d-f482f8c5ae3f
 thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/29557cc6_7dd5_444e_9a10_74f787dd95fe/1705310568637_undraw_transfer_money_re_6o1h_%282%29.svg
+  https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705405005855_partenrship.png
 uuid: what-is-voltage-finance-fuse-547
 version: 1
 priority: 1
