--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-16T11:44:26.725Z'
+created: '2024-01-16T11:45:29.315Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
@@ -786,28 +786,6 @@ steps:
           actively participating in the launch.
     uuid: 0aa574f5-2b57-464c-8a5d-a3ef73a6ab1d
   - content: >-
-      Once you have completed the quiz please provide your wallet address (must
-      be compatible with Fuse Network, i.e. MetaMask) and an email address you
-      have access to. 
-
-
-      100 Winners will be chosen from all the applicants who complete the TaskOn
-      tasks and answer all the quiz questions correctly. 
-
-
-      Once the 100 winners are selected, you will be notified by email. 
-    name: 'That''s it! '
-    stepItems:
-      - label: Wallet Address
-        required: true
-        type: PrivateShortInput
-        uuid: 64859c02-f572-4817-bd60-595a0e956168
-      - label: Email Address
-        required: true
-        type: PrivateShortInput
-        uuid: 41c0c90f-2358-43ea-9730-ff5465071e09
-    uuid: a5c0b68c-ccb8-43bb-831d-f482f8c5ae3f
-  - content: >-
       Voltage Finance is a decentralized finance (DeFi) platform that is set to
       make a big impact on the Fuse Network in 2024. The company has ambitious
       plans to increase its total value locked (TVL) and trading volume by 10
@@ -914,6 +892,29 @@ steps:
           significant advancements to the platform with a focus on liquidity,
           user experience, and new DeFi opportunities.
     uuid: 4e09c7e9-237c-4445-a6e3-26d7bae67059
+  - content: >-
+      Once you have completed the quiz please provide your wallet address (must
+      be compatible with Fuse Network, i.e. MetaMask) and an email address you
+      have access to. 
+
+
+      100 Winners will be chosen from all the applicants who complete the TaskOn
+      tasks and answer all the quiz questions correctly. 
+
+
+      Once the 100 winners are randomly selected, you will be notified by
+      email. 
+    name: 'That''s it! '
+    stepItems:
+      - label: Wallet Address
+        required: true
+        type: PrivateShortInput
+        uuid: 64859c02-f572-4817-bd60-595a0e956168
+      - label: Email Address
+        required: true
+        type: PrivateShortInput
+        uuid: 41c0c90f-2358-43ea-9730-ff5465071e09
+    uuid: a5c0b68c-ccb8-43bb-831d-f482f8c5ae3f
 thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705405047681_partenrship.png
 uuid: what-is-voltage-finance-fuse-547
