update guide What is Voltage Finance?

--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-16T11:45:29.315Z'
+created: '2024-01-17T14:15:28.732Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
@@ -23,14 +23,12 @@ steps:
       **VOLTAGE FINANCE QUIZ DETAILS: 
 
 
-      Opening Date: Thursday 18th January at 2 PM UTC 
-
+      Opening Date: Thursday 18th January at 2 PM UTC
+       
       Closing Date: Thursday 25th January at 2 PM UTC
 
 
-      $500 in VOLT Tokens will be shared by 100 winners. 
-
-      100 Winners are picked randomly from all successful applicants. **
+      $500 in FUSE Tokens will be shared by 100 randomly selected winners.**
     name: 'Welcome to Fuse University '
     stepItems: []
     uuid: c9d383e9-7491-498c-829c-8d79307bbf24
