--- a/src/guides/main/what-are-web3-payments-fuse-104.yaml
+++ b/src/guides/main/what-are-web3-payments-fuse-104.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Everything you need to know about crypto payments
-created: '2023-09-26T11:53:37.548Z'
+created: '2024-01-17T14:18:42.266Z'
 guideType: onboarding
 key: what-are-web3-payments-fuse-104
 name: 'What are Web3 Payments? '
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Web3 payments refer to the use of blockchain technology to facilitate the
@@ -155,3 +155,4 @@ thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_are_web3_payments_fuse_104/1691043729480_undraw_product_explainer_8jbm.png
 uuid: what-are-web3-payments-fuse-104
 version: 1
+priority: 50
