--- a/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
+++ b/src/guides/main/fuse-in-2023-beyond-fuse-740.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Fuse has made significant progress in 2023
-created: '2023-09-26T11:54:00.654Z'
+created: '2024-01-17T14:19:03.048Z'
 guideType: onboarding
 key: fuse-in-2023-beyond-fuse-740
 name: Fuse in 2023 & Beyond
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Fuse has made significant progress in 2023 and has exciting updates and
@@ -146,3 +146,4 @@ thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/fuse_in_2023_beyond_fuse_740/1691043884131_undraw_software_engineer_re_tnjc.png
 uuid: fuse-in-2023-beyond-fuse-740
 version: 1
+priority: 50
