--- a/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
+++ b/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Merchants, Operators, and Power Validators
-created: '2023-09-26T11:54:20.371Z'
+created: '2024-01-17T14:19:19.418Z'
 guideType: onboarding
 key: roles-entities-at-fuse-fuse-130
 name: Roles & Entities at Fuse
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       Fuse Network is a payment-focused blockchain ecosystem that aims to become
@@ -147,3 +147,4 @@ thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/roles_entities_at_fuse_fuse_130/1691043816750_undraw_mind_map_re_nlb6.png
 uuid: roles-entities-at-fuse-fuse-130
 version: 1
+priority: 50
