--- a/src/guides/main/how-to-stake-fuse-fuse-658.yaml
+++ b/src/guides/main/how-to-stake-fuse-fuse-658.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: 'Earn Up to 14% APY '
-created: '2023-09-26T12:08:42.942Z'
+created: '2024-01-17T14:20:22.405Z'
 guideType: onboarding
 key: how-to-stake-fuse-fuse-658
 name: How to Stake $FUSE
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       This tutorial will explain how to delegate/stake/unstake your FUSE.
@@ -74,3 +74,4 @@ thumbnail: >-
   https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/62aa1eb9_caf3_44e4_88bb_13197dc1e376/1695729415471_undraw_savings_re_eq4w.svg
 uuid: how-to-stake-fuse-fuse-658
 version: 1
+priority: 50
