--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,12 +1,12 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-17T14:20:53.790Z'
+created: '2024-01-17T14:45:45.870Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
 publishStatus: Live
 steps:
-  - content: >-
+  - content: >
       Welcome to Fuse University – Your Gateway to Web3 Knowledge and Token
       Rewards! 
 
@@ -18,6 +18,11 @@ steps:
 
       Dive into the world of decentralized technologies, blockchain, and more,
       and let your Web3 knowledge flourish while reaping the rewards!
+
+
+      <div align="center">
+        <img style="max-height:400px;margin-bottom:30px" src="https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705502715343_fuse_learn%26earn_%281%29.png"/>
+      </div>
 
 
       **VOLTAGE FINANCE QUIZ DETAILS: 
@@ -914,7 +919,7 @@ steps:
         uuid: 41c0c90f-2358-43ea-9730-ff5465071e09
     uuid: a5c0b68c-ccb8-43bb-831d-f482f8c5ae3f
 thumbnail: >-
-  https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705405047681_partenrship.png
+  https://d31h13bdjwgzxs.cloudfront.net/academy/fuse/Guide/what_is_voltage_finance_fuse_547/1705502699085_fuse_learn%26earn_%281%29.png
 uuid: what-is-voltage-finance-fuse-547
 version: 1
 priority: 1
