--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-01-17T14:45:45.870Z'
+created: '2024-01-25T14:00:19.967Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >
       Welcome to Fuse University – Your Gateway to Web3 Knowledge and Token
