update guide What is Fuse Network?

--- a/src/guides/main/what-is-fuse-network-fuse-818.yaml
+++ b/src/guides/main/what-is-fuse-network-fuse-818.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: 'Learn all about our tech stack '
-created: '2024-01-17T14:18:11.564Z'
+created: '2024-02-12T08:51:06.548Z'
 guideType: onboarding
 key: what-is-fuse-network-fuse-818
 name: What is Fuse Network?
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse Network is a decentralized blockchain platform that was created in
