update guide What is Account Abstraction?

--- a/src/guides/main/what-is-account-abstraction-fuse-615.yaml
+++ b/src/guides/main/what-is-account-abstraction-fuse-615.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Learn all about AA
-created: '2024-01-17T14:18:27.982Z'
+created: '2024-02-12T09:58:38.342Z'
 guideType: onboarding
 key: what-is-account-abstraction-fuse-615
 name: What is Account Abstraction?
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Account abstraction is a concept in blockchain technology that simplifies
