update guide What are Web3 Payments?

--- a/src/guides/main/what-are-web3-payments-fuse-104.yaml
+++ b/src/guides/main/what-are-web3-payments-fuse-104.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Everything you need to know about crypto payments
-created: '2024-01-17T14:18:42.266Z'
+created: '2024-02-13T12:43:15.456Z'
 guideType: onboarding
 key: what-are-web3-payments-fuse-104
 name: 'What are Web3 Payments? '
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Web3 payments refer to the use of blockchain technology to facilitate the
