--- a/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
+++ b/src/guides/main/roles-entities-at-fuse-fuse-130.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Merchants, Operators, and Power Validators
-created: '2024-01-17T14:19:19.418Z'
+created: '2024-02-13T12:44:01.373Z'
 guideType: onboarding
 key: roles-entities-at-fuse-fuse-130
 name: Roles & Entities at Fuse
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse Network is a payment-focused blockchain ecosystem that aims to become
