update guide What is FUSE Staking?

--- a/src/guides/main/what-is-fuse-staking-fuse-260.yaml
+++ b/src/guides/main/what-is-fuse-staking-fuse-260.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Put FUSE to Work with Staking
-created: '2024-01-17T14:19:32.833Z'
+created: '2024-02-13T12:44:33.248Z'
 guideType: onboarding
 key: what-is-fuse-staking-fuse-260
 name: What is FUSE Staking?
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       FUSE Staking is a process that allows holders of FUSE tokens to earn a
