--- a/src/guides/main/what-is-web3-fuse-773.yaml
+++ b/src/guides/main/what-is-web3-fuse-773.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Learn about Web 3.0
-created: '2024-01-17T14:19:47.391Z'
+created: '2024-02-13T12:45:05.406Z'
 guideType: onboarding
 key: what-is-web3-fuse-773
 name: 'What is Web3? '
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Web3 is a term used to describe the vision of a new and improved internet.
