update guide What is Fuse Ignite?

--- a/src/guides/main/what-is-fuse-ignite-fuse-867.yaml
+++ b/src/guides/main/what-is-fuse-ignite-fuse-867.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Developer Funding & Grants
-created: '2024-01-17T14:19:58.890Z'
+created: '2024-02-13T12:45:26.362Z'
 guideType: onboarding
 key: what-is-fuse-ignite-fuse-867
 name: What is Fuse Ignite?
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Fuse Ignite is a funding program launched by Fuse with a budget of over
