update guide How to Stake $FUSE

--- a/src/guides/main/how-to-stake-fuse-fuse-658.yaml
+++ b/src/guides/main/how-to-stake-fuse-fuse-658.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: 'Earn Up to 14% APY '
-created: '2024-01-17T14:20:22.405Z'
+created: '2024-02-13T12:47:56.408Z'
 guideType: onboarding
 key: how-to-stake-fuse-fuse-658
 name: How to Stake $FUSE
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       This tutorial will explain how to delegate/stake/unstake your FUSE.
