--- a/src/guides/main/what-is-fuse-staking-fuse-260.yaml
+++ b/src/guides/main/what-is-fuse-staking-fuse-260.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: Put FUSE to Work with Staking
-created: '2024-02-13T12:44:33.248Z'
+created: '2024-02-13T12:48:22.035Z'
 guideType: onboarding
 key: what-is-fuse-staking-fuse-260
 name: What is FUSE Staking?
-publishStatus: Live
+publishStatus: Draft
 steps:
   - content: >-
       FUSE Staking is a process that allows holders of FUSE tokens to earn a
