update guide What is Voltage Finance?

--- a/src/guides/main/what-is-voltage-finance-fuse-547.yaml
+++ b/src/guides/main/what-is-voltage-finance-fuse-547.yaml
@@ -1,10 +1,10 @@
 categories: []
 content: The simplest way to get into DeFi
-created: '2024-02-13T12:49:45.278Z'
+created: '2024-02-13T12:51:15.178Z'
 guideType: onboarding
 key: what-is-voltage-finance-fuse-547
 name: 'What is Voltage Finance? '
-publishStatus: Draft
+publishStatus: Live
 steps:
   - content: >-
       Welcome to Fuse University – Your Gateway to Web3 Knowledge and Token
